fixed overflow

--- a/CSS/tarotstyle.css
+++ b/CSS/tarotstyle.css
@@ -241,7 +241,8 @@ nav li a:hover{
 @media only screen and (max-width: 992px)
 {
     #packages .block{
-    width: 100%;
+    width: 95%;
+    float: none;
     }
 }
 
